test/typecheck/pass/scattered_enum/v2.sail

enum E = D | E | F

enum clause E = A
enum clause E = B
enum clause E = C
