test/typecheck/fail/duplicate_type_id6.sail
union a = { A : unit }
union b = { B : unit }
union c = { C : unit }
union d = { D : unit }
union e = { E : unit }
union f = { F : unit }

union a = { A : unit }
